<resources>
    <string name="app_name">physiohut</string>
    <string name="logo">logo</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_doctor_psf">Εισαγωγή Ονόματος Γιατρού</string>
    <string name="go_to_doctor">Go to Doctor</string>
    <string name="go_to_patient">Go to Patient</string>
    <string name="go_to_psf">Go to PSF</string>
    <string name="welcome_to_doctor_s_page">Welcome to doctor\'s page</string>
    <string name="welcome_to_patient_s_home">Welcome to patient\'s home</string>
    <string name="welcome_or_something">Welcome or something</string>
    <string name="create_clinic">Δημιουργία Φυσιοθεραπευτηρίου</string>
    <string name="create_new_provision">Δημιουργία Νέας Παροχής</string>
    <string name="next_move">Επέλεξε την επόμενη σου κίνηση:</string>
    <string name="text_clinic">Δημιουργία Φυσιοθεραπευτηρίου:</string>
    <string name="text_provision">Δημιουργία Νέας Παροχής:</string>
    <string name="appointment">Κλείστε ραντεβού</string>
    <string name="economic">Ανάλυση οικονομικής κατάστασης</string>
    <string name="appointmenttext">Για να κλείσετε ένα ραντεβού:</string>
    <string name="economictext">Για να δείτε την οικονομική κατάσταση:</string>
    <string name="showHistory">Προβολή Ιστορικού</string>
    <string name="add_patient">add patient</string>
    <string name="appointment_request">Appointment Request</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="total_payments">Συνολικά έχετε πληρώσει:</string>
    <string name="default_total">0$</string>
    <string name="sort_by">Ταξινόμηση:</string>

    <string-array name="sort_choices_array">
        <item>Επιλογές:</item>
        <item>Αύξον Κόστος</item>
        <item>Φθίνον Κόστος</item>
        <item>Πιο πρόσφατες</item>
        <item>Πιο παλιές</item>
    </string-array>
    <string name="katagrafitext">Καταγραφή Ενεργειών</string>
    <string name="history_text">Ιστορικό Ασθενή #1:</string>
    <string name="input_amka">Εισαγωγή ΑΜΚΑ:</string>
    <string name="input_afm">Εισαγωγή ΑΦΜ:</string>
    <string name="addition_patient">Προσθήκη Ασθενή</string>
    <string name="import_name">Εισαγωγή ονοματεπωνύμου:</string>
    <string name="name">Ονοματεπώνυμο...</string>
    <string name="input_address">Εισαγωγή διεύθυνησης:</string>
    <string name="amka">ΑΜΚΑ...</string>
    <string name="address">Διεύθυνηση...</string>
    <string name="btn_submit_text">Υποβολή</string>
    <string name="creation">Δημιουργία</string>
    <string name="creation_provision">Δημιουργία Παροχής:</string>
    <string name="text_code">Εισαγώγη κωδικού:</string>
    <string name="text_name_provision"> Εισαγωγή ονόματος παροχής:</string>
    <string name="text_price"> Εισαγωγή τιμής:</string>
    <string name="text_description"> Εισαγωγή περιγραφής:</string>
    <string name="name_provision">Όνομα Παροχής...</string>
    <string name="price">Τιμή...</string>
    <string name="code">Κωδικός...</string>
    <string name="description"> Περιγραφή...</string>
    <string name="space">   </string>
    <string name="spinner_title">Patients spinner</string>
    <string name="sortBy">Ταξινόμηση Κατά :</string>
    <string name="dateOfAppointment">Ημερομηνία &amp; ώρα:</string>
    <string name="locationOfAppointment">Περιοχή:</string>
    <string name="timeOfAppointmentString">Ώρα:</string>
    <string name="arrowDescription">Arrow to expand view</string>
    <string name="profilePicDescr">Patient profile picture</string>
    <string name="patientName">name</string>
    <string name="expandButtonR7ContentDescription">Expand button</string>

    <string-array name="sortBySpinner">
        <item>Όνομα Α-Ζ</item>
        <item>Όνομα Ζ-Α</item>
    </string-array>

</resources>