<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <Button
        android:id="@+id/DoctorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_doctor"
        android:layout_gravity="center|top"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/button"/>

    <Button
        android:id="@+id/PatientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_patient"
        android:layout_gravity="center"
        android:backgroundTint="@color/button"/>

    <Button
        android:id="@+id/PsfButton"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="200dp"
        android:text="@string/go_to_psf"
        android:backgroundTint="@color/button"/>
</FrameLayout>